--- a/style.css
+++ b/style.css
@@ -154,6 +154,9 @@
 }
 .footer-social-link li a{
   color: #fff;
+  font-size: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .slider-contain{
   background-color: black ;
